--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "node_0": "nodemon --watch dev -e js dev/networkNode.js 3000 http://localhost:3000",
-    "node_1": "nodemon --watch dev -e js dev/networkNode.js 3001 http://localhost:3001",
-    "node_2": "nodemon --watch dev -e js dev/networkNode.js 3002 http://localhost:3002",
-    "node_3": "nodemon --watch dev -e js dev/networkNode.js 3003 http://localhost:3003",
-    "node_4": "nodemon --watch dev -e js dev/networkNode.js 3004 http://localhost:3004",
-    "node_5": "nodemon --watch dev -e js dev/networkNode.js 3005 http://localhost:3005"
+    "node_0": "nodemon --watch dev -e js dev/app.js 3000 http://localhost:3000 40567",
+    "node_1": "nodemon --watch dev -e js dev/app.js 3001 http://localhost:3001 40568",
+    "node_2": "nodemon --watch dev -e js dev/app.js 3002 http://localhost:3002 40569",
+    "node_3": "nodemon --watch dev -e js dev/app.js 3003 http://localhost:3003 40566",
+    "node_4": "nodemon --watch dev -e js dev/app.js 3004 http://localhost:3004 40565",
+    "node_5": "nodemon --watch dev -e js dev/app.js 3005 http://localhost:3005 40564",
+    "start0": "node dev/app.js 5000 http://localhost:3000 50560",
+    "start1": "node dev/app.js 5001 http://localhost:3001 50561",
+    "start2": "node dev/app.js 5002 http://localhost:3002 50562",
+    "start3": "node dev/app.js 5003 http://localhost:3003 50563",
+    "start4": "node dev/app.js 5004 http://localhost:3004 50564",
+    "start5": "node dev/app.js 5005 http://localhost:3005 50566"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +26,7 @@
     "body-parser": "^1.18.3",
     "browserify": "^16.2.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "ejs": "^2.6.1",
     "express": "^4.16.3",
     "jade": "^1.11.0",
@@ -30,6 +37,7 @@
     "nodemon": "^1.18.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.6",
+    "secp256k1": "^4.0.2",
     "sha256": "^0.2.0",
     "socket.io": "^1.4.8",
     "socket.io-client": "^4.1.0",
